<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.abdussamed.sendemailapp.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sending_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_admin_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/supported_email"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currently_supported_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="200dp" />

    </RelativeLayout>

    <EditText
        android:ems="10"
        android:hint="@string/enter_gmail_id"
        android:inputType="textEmailAddress"
        android:id="@+id/e_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <EditText
        android:ems="10"
        android:hint="@string/enter_email_password"
        android:inputType="textPassword"
        android:id="@+id/e_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:ems="10"
        android:hint="@string/enter_subject"
        android:id="@+id/e_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
    <EditText
        android:ems="10"
        android:hint="@string/enter_text"
        android:id="@+id/e_tex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Email" />

</LinearLayout>
